--- a/Angular/taskify-frontend/src/app/home/home.component.html
+++ b/Angular/taskify-frontend/src/app/home/home.component.html
@@ -20,7 +20,7 @@
         <div class="content-container">
             <div class="text-content">
                 <h2>Taskify is a task manager</h2>
-                <button class="signup-button" routerLink="/login" routerLinkActive="active">Sign up for free</button>
+                <button class="signup-button" routerLink="/register" routerLinkActive="active">Sign up for free</button>
                 <p>Simple, flexible and powerful. Boards, lists, and maps are enough to get a clear view of who's doing what and what tasks you still need to do.</p>
             </div>
             <img src="../assets/logo-logo.png" alt="logo2" class="main-image">
