--- a/Angular/taskify-frontend/src/app/login/login.component.css
+++ b/Angular/taskify-frontend/src/app/login/login.component.css
@@ -1,3 +1,4 @@
+/* CSS de base */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -44,7 +45,7 @@ header {
 
 .nav-button {
     padding: 10px 15px;
-    background-color: #007bff;
+    background-color: #007bff; /* Couleur bleu */
     color: white;
     border: none;
     cursor: pointer;
@@ -52,7 +53,7 @@ header {
 }
 
 .nav-button:hover {
-    background-color: #0056b3;
+    background-color: #0056b3; /* Couleur bleu foncé au survol */
 }
 
 main {
