--- a/Angular/taskify-frontend/src/app/login/login.component.html
+++ b/Angular/taskify-frontend/src/app/login/login.component.html
@@ -13,24 +13,24 @@
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
-            <button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</button>
-            <button class="access-button">Register</button>
+            <button class="nav-button" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</button>
+            <button class="access-button" routerLink="/register" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Register</button>
         </nav>
     </header>
     
     <main>
         <div class="login-container">
             <h2>Login</h2>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="login-button">Login</button>
-                <a href="#" class="forgot-password">Forgot password?</a>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="login-button">Login</button>
+            <a href="#" class="forgot-password">Forgot password?</a>
             <div class="divider">
                 <span>OR</span>
             </div>
