--- a/Angular/taskify-frontend/src/app/home/home.component.html
+++ b/Angular/taskify-frontend/src/app/home/home.component.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../assets/logo-taskify.png" alt="logo" class="logo">
+            <img src="./assets/logo-taskify.png" alt="logo" class="logo">
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
-            <button class="access-button">Access your boards</button>
+            <button class="access-button" routerLink="/your-board" routerLinkActive="active">Access your boards</button>
         </nav>
     </header>
     <main>
@@ -23,14 +23,20 @@
                 <button class="signup-button" routerLink="/register" routerLinkActive="active">Sign up for free</button>
                 <p>Simple, flexible and powerful. Boards, lists, and maps are enough to get a clear view of who's doing what and what tasks you still need to do.</p>
             </div>
-            <img src="../assets/logo-logo.png" alt="logo2" class="main-image">
+            <img src="assets/logo-logo.png" alt="logo2" class="main-image">
         </div>
     </main>
 
-    <div class="menu-button">
+    <div class="menu-button" (click)="toggleMenu()">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
+    </div>
+
+    <div class="dropdown-menu" *ngIf="isMenuOpen">
+        <h3>Menu</h3>
+        <button routerLink="/profile" routerLinkActive="active">Profile</button>
+        <button>Logout</button>
     </div>
 </body>
 </html>
