--- a/Angular/taskify-frontend/src/app/login/login.component.html
+++ b/Angular/taskify-frontend/src/app/login/login.component.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../assets/logo-taskify.png" alt="logo" class="logo">
+            <img src="assets/logo-taskify.png" alt="logo" class="logo">
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
@@ -30,7 +30,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit" class="login-button">Login</button>
-            <a href="#" class="forgot-password">Forgot password?</a>
+            <a class="forgot-password" routerLink="/forgot-password" routerLinkActive="active">Forgot password?</a>
             <div class="divider">
                 <span>OR</span>
             </div>
