--- a/Angular/taskify-frontend/src/app/register/register.component.html
+++ b/Angular/taskify-frontend/src/app/register/register.component.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../assets/logo-taskify.png" alt="logo" class="logo">
+            <img src="assets/logo-taskify.png" alt="logo" class="logo">
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
@@ -36,7 +36,7 @@
                 </div>
                 <button type="submit" class="register-button">Register</button>
             </form>
-            <p>Already have an account? <a href="login.component.html">Login here</a></p>
+            <p>Already have an account? <a routerLink="/login" routerLinkActive="active">Login here</a></p>
         </div>
     </main>
 
