--- a/Angular/taskify-frontend/src/app/login/login.component.html
+++ b/Angular/taskify-frontend/src/app/login/login.component.html
@@ -21,15 +21,17 @@
     <main>
         <div class="login-container">
             <h2>Login</h2>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="login-button">Login</button>
+            <form (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" [(ngModel)]="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" [(ngModel)]="password" required>
+                </div>
+                <button type="submit" class="login-button">Login</button>
+            </form>
             <a class="forgot-password" routerLink="/forgot-password" routerLinkActive="active">Forgot password?</a>
             <div class="divider">
                 <span>OR</span>
