--- a/Angular/taskify-frontend/src/app/task-manager/task-manager.component.html
+++ b/Angular/taskify-frontend/src/app/task-manager/task-manager.component.html
@@ -80,8 +80,15 @@
     </main>
 
     <div class="menu-button" (click)="toggleMenu()">
-        <span *ngIf="!isMenuOpen">Menu</span>
-        <span *ngIf="isMenuOpen">Close</span>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+
+    <div class="dropdown-menu" *ngIf="isMenuOpen">
+        <h3>Menu</h3>
+        <button routerLink="/profile" routerLinkActive="active">Profile</button>
+        <button>Logout</button>
     </div>
 </div>
 </body>
