fix the images problem

--- a/Angular/taskify-frontend/src/app/task-manager/task-manager.component.html
+++ b/Angular/taskify-frontend/src/app/task-manager/task-manager.component.html
@@ -10,7 +10,7 @@
 <div class="task-manager">
     <header>
         <div class="logo">
-            <img src="assets/logo.png" alt="Taskify Logo" />
+            <img src="https://raw.githubusercontent.com/omega-jean/Taskify/refs/heads/main/Angular/taskify-frontend/public/assets/logo-taskify.png" alt="Taskify Logo" />
             <span>Taskify</span>
         </div>
         <div class="header-buttons">
