--- a/Angular/taskify-frontend/src/app/home/home.component.html
+++ b/Angular/taskify-frontend/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="./assets/logo-taskify.png" alt="logo" class="logo">
+            <img src="https://raw.githubusercontent.com/omega-jean/Taskify/refs/heads/main/Angular/taskify-frontend/public/assets/logo-taskify.png" alt="logo" class="logo">
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
@@ -23,7 +23,7 @@
                 <button class="signup-button" routerLink="/register" routerLinkActive="active">Sign up for free</button>
                 <p>Simple, flexible and powerful. Boards, lists, and maps are enough to get a clear view of who's doing what and what tasks you still need to do.</p>
             </div>
-            <img src="assets/logo-logo.png" alt="logo2" class="main-image">
+            <img src="https://raw.githubusercontent.com/omega-jean/Taskify/refs/heads/main/Angular/taskify-frontend/public/assets/logo-logo.png" alt="logo2" class="main-image">
         </div>
     </main>
 
