--- a/Angular/taskify-frontend/src/app/login/login.component.html
+++ b/Angular/taskify-frontend/src/app/login/login.component.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/logo-taskify.png" alt="logo" class="logo">
+            <img src="https://raw.githubusercontent.com/omega-jean/Taskify/refs/heads/main/Angular/taskify-frontend/public/assets/logo-taskify.png" alt="logo" class="logo">
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
