--- a/Angular/taskify-frontend/src/app/modify-password/modify-password.component.html
+++ b/Angular/taskify-frontend/src/app/modify-password/modify-password.component.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/logo-taskify.png" alt="Taskify Logo" class="logo">
+            <img src="https://raw.githubusercontent.com/omega-jean/Taskify/refs/heads/main/Angular/taskify-frontend/public/assets/logo-taskify.png" alt="Taskify Logo" class="logo">
             <h1>Taskify</h1>
         </div>
         <h2 class="page-title">Change Password</h2>
