--- a/Angular/taskify-frontend/src/app/profile/profile.component.html
+++ b/Angular/taskify-frontend/src/app/profile/profile.component.html
@@ -26,7 +26,7 @@
                 <div class="action-buttons">
                     <button class="change-password-button" routerLink="/modify-password" routerLinkActive="active">Change Password</button>
                     <button class="delete-account-button">Delete Account</button>
-                    <button class="logout-button">Logout</button>
+                    <button class="logout-button" (click)="onLogout()">Logout</button>
                 </div>
             </div>
         </div>
