--- a/Angular/taskify-frontend/src/app/task-manager/task-manager.component.html
+++ b/Angular/taskify-frontend/src/app/task-manager/task-manager.component.html
@@ -88,7 +88,7 @@
     <div class="dropdown-menu" *ngIf="isMenuOpen">
         <h3>Menu</h3>
         <button routerLink="/profile" routerLinkActive="active">Profile</button>
-        <button>Logout</button>
+        <button (click)="onLogout()">Logout</button>
     </div>
 </div>
 </body>
