--- a/Angular/taskify-frontend/src/app/home/home.component.html
+++ b/Angular/taskify-frontend/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             <h1 class="title">Taskify</h1>
         </div>
         <nav>
-            <button class="access-button" routerLink="/your-board" routerLinkActive="active">Access your boards</button>
+            <button class="access-button" (click)="onAccessBoards()">Access your boards</button>
         </nav>
     </header>
     <main>
