--- a/Angular/taskify-frontend/src/app/task-manager/task-manager.component.css
+++ b/Angular/taskify-frontend/src/app/task-manager/task-manager.component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f0f4f8;
+    background-color: #eaeaea;
     min-height: 100vh;
 }
 
